@@ -1,3 +1,9 @@
+Wed Dec 29 16:10:21 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/SOCK_Stream.h: Noted that the timeout on the counted send/recv
+          methods applies per operation, restarting on retries, not to the
+          overall set of retries.
+
 Tue Dec 14 13:13:17 CET 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ACE version 6.0.0 released.
